# fastapi-production-template

./: .dockerignore  .env  alembic.ini  dev.env  dev.host.env  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2022.11.06_initial_models.py  22b0d7adef29_first_migration.py
docker/: Dockerfile  compose.dev.yml  docker-entrypoint.sh  entrypoint.sh
scripts/: run_local.bat
src/: config.py  database.py  main.py  models.py  views.py
src/db/: __init__.py  base.py  session.py
src/modules/user/: router.py
src/modules/user/models/: user.py
src/tests/: conftest.py  user_test.py
src/user/: models.py  schemas.py
